# advent-of-code-2019

./: .gitignore  Cargo.toml  builder.sh  default.nix  main.rs  shell.nix
2019/: shell.nix
2019/day03/: Cargo.toml
2019/day05/: Cargo.toml
2019/day05/src/: main.rs
2019/day06/src/: main.rs
2019/day08/: Cargo.toml
2019/day08/src/: main.rs
2019/day09/: Cargo.toml
2019/day09/src/: main.rs
2019/day10/: Cargo.toml
2021/: Cargo.toml
2021/src/: main.rs
2022/day01/: main.clj
2025/: README.org  build.zig  devenv.nix
2025/day01/: day01.zig
day01/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/src/: main.rs
day06/: Cargo.toml
day06/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/src/: main.rs
day10/src/: main.rs
twenty-twenty-two/: CHANGELOG.md  README.md  project.clj
twenty-twenty-two/doc/: intro.md
twenty-twenty-two/src/twenty_twenty_two/: core.clj  day-02.clj  day-03.clj  day-04.clj  day-05.clj  day-06.clj  day-07.clj
twenty-twenty-two/test/twenty_twenty_two/: core_test.clj
